--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
                 <p class="mb-8 text-lg text-gray-600" data-i18n="bookingSubText">Schedule your session online or call us today to discuss how Bowen Therapy can help you achieve your wellness goals.</p>
 
                 <div class="card-new p-6">
-                    <form action="#" method="POST" class="space-y-4">
+                    <form action="https://api.web3forms.com/submit" method="POST" class="space-y-4">
+				    <input type="hidden" name="access_key" value="2c3f0392-3261-4596-8ed9-247a9fb38642">
                         <input type="text" placeholder="Your Full Name" required class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderName">
                         <input type="email" placeholder="Email Address" required class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderEmail">
                         <input type="tel" placeholder="Phone Number (Optional)" class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderPhone">
