--- a/index.html
+++ b/index.html
@@ -315,13 +315,14 @@
 
                 <div class="card-new p-6">
                     <form action="https://api.web3forms.com/submit" method="POST" class="space-y-4">
-				    <input type="hidden" name="access_key" value="2c3f0392-3261-4596-8ed9-247a9fb38642">
+				    <input type="hidden" name="access_key" value="06acd50e-7338-4378-bb7d-ee9ce42264ae">
                         <input type="text" placeholder="Your Full Name" required class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderName">
                         <input type="email" placeholder="Email Address" required class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderEmail">
                         <input type="tel" placeholder="Phone Number (Optional)" class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderPhone">
                         <textarea placeholder="Tell us briefly about your main concern (e.g., Sciatica, Insomnia, Stress)" rows="3" class="w-full p-3 border border-gray-300 rounded-md" data-i18n-placeholder="placeholderConcern"></textarea>
-                        
-                        <a href="#" class="cta-button w-full inline-block mt-4 text-lg" data-i18n="bookingCta">Request Appointment Time</a>
+                        <button type="submit" class="cta-button w-full inline-block mt-4 text-lg" data-i18n="bookingCta">
+                           Request Appointment Time
+                        </button>
                     </form>
                     
                     <p class="text-sm text-gray-700 mt-4" data-i18n="contactHours">We are open Monday to Friday, 9:00 AM - 6:00 PM. All sessions are by appointment only.</p>
