--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         /* Hero Styling */
         #hero-new {
-            background-image: url('bowenbg2.jpg');
+            background-image: url('img/bowenbg2.jpg');
             background-size: cover;
             background-position: center 20%;
             color: var(--color-charcoal);
